--- a/index.html
+++ b/index.html
@@ -34,29 +34,32 @@
 
     <main>
         <section>
-            <h1>Effective Solutions <br/>
+            <h1>Effective Solutions
                 for Your Business</h1>
                <button type="button">Order Service</button>
         </section>
         
         <section>
-            <h3>Strategy</h3>            
+            <ul>
+                <li><h3>Strategy</h3></li>          
                 <p>
                     Our goal is to identify the business
                     problem to walk away with the perfect and creative solution. 
                 </p>
-            <h3>Punctuality</h3> 
+            <li><h3>Punctuality</h3></li>
                 <p>
                     Bring the key message to the brand's audience for the best price within the shortest possible time.
                 </p>   
-            <h3>Diligence</h3>   
+            <li><h3>Diligence</h3></li>  
                 <p>
                     Research and confirm brands with the strongest digital growth opportunities and minimize risk.
                 </p>  
-            <h3>Technologies</h3> 
+            <li><h3>Technologies</h3></li>
                 <p>
                     Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
                 </p>
+            </ul>
+            
 
         </section>
 
@@ -90,7 +93,7 @@
 
     ><footer>
 
-        <a href=""><span>web</span>studio</a>
+        <a href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 
 
